# DarkTimer

./: .env.example  .gitignore  CLAUDE.md  DarkTimer_Replication_Guide.md  LICENSE  README.md  index.html  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
src/: App.test.tsx  App.tsx  index.css  index.test.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ChemsView.test.tsx  ChemsView.tsx  DeveloperCompensationInput.tsx  EmptyState.tsx  FilmSearch.test.tsx  FilmSearch.tsx  HistoryView.test.tsx  HistoryView.tsx  LibraryView.tsx  ManualTimerForm.test.tsx  ManualTimerForm.tsx  PresetLibrary.test.tsx  PresetLibrary.tsx  ProcessModeSwitch.tsx  SearchableField.test.tsx  SearchableField.tsx  SessionView.compensation.test.tsx  SessionView.test.tsx  SessionView.tsx  SettingsMenu.test.tsx  SettingsMenu.tsx  TemperatureInput.tsx  ThemedSelectField.tsx  Timer.test.tsx  Timer.tsx
src/hooks/: useApiKeySession.ts  useStoredData.ts
src/lib/: utils.ts
src/services/: ai.test.ts  ai.ts  aiErrors.test.ts  aiErrors.ts  aiShared.test.ts  aiShared.ts  chemTypes.ts  chems.ts  devChart.test.ts  devChart.ts  gemini.ts  mistral.ts  notifications.test.ts  notifications.ts  presetTypes.ts  presets.ts  pwa.test.ts  pwa.ts  recipe.test.ts  recipe.ts  searchCatalog.ts  secretStorage.test.ts  secretStorage.ts  settings.ts  storage.test.ts  storage.ts  userSettings.test.ts  userSettings.ts
src/test/: setup.ts  utils.ts
